--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/myjdbc?serverTimezone=Asia/Tai
 spring.datasource.username=root
 spring.datasource.password=springboot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
